fixed mp-finder flex layout issue

--- a/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.less
+++ b/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.less
@@ -1,7 +1,4 @@
 form,
-formly-form {
-  width: 100%;
-}
 .expression-button {
   span.hide {
     transform: rotate(0deg);
