--- a/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
+++ b/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
@@ -9,9 +9,12 @@
 .expression-preview {
     width: 100%;
     padding: 3px;
-    background-color: white;
+    background-color: #f5f5f5;
     border: 1px solid #CCCCCC;
     border-radius: 2px;
+    &.active {
+      background-color: white;
+    }
 }
 
 .finder-label {
