--- a/client/src/app/forms2/wrappers/field-grid/field-grid.wrapper.less
+++ b/client/src/app/forms2/wrappers/field-grid/field-grid.wrapper.less
@@ -9,6 +9,7 @@
 .field-grid {
   &.cols-2 {
     ::ng-deep formly-group:first-of-type {
+    border: 1px solid green;
       .cvc-grid-cols(2);
     }
   }
@@ -24,29 +25,4 @@
       .cvc-grid-cols(4);
     }
   }
-  // ::ng-deep formly-group:first-of-type {
-  //   display: grid;
-
-  //   // border: 1px solid lightgreen;
-  //   // formly-field {
-  //   //   display: block;
-  //   //   background-color: lightblue;
-  //   // }
-  // }
-  // ::ng-deep formly-field {
-  //   display: grid;
-  //   background-color: lightgreen;
-  // }
-  // &.layout-block {
-  //   ::ng-deep cvc-form-field-wrapper:first-of-type {
-  //     display: block;
-  //     background-color: lightgreen;
-  //   }
-  // }
-  // &.layout-inline {
-  //   ::ng-deep cvc-form-field-wrapper:first-of-type {
-  //     display: inline-block;
-  //     background-color: lightblue;
-  //   }
-  // }
 }
